--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Imágenes UAS</title>
-<script src="script.js" defer></script>
-</head>
-<body>
-<h1>Galería de imágenes</h1>
-<div id="gallery"></div>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Imágenes UAS</title>
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <h1>Galería de imágenes</h1>
+    <div id="gallery"></div>
+    <div id="imagenes"></div>
+    <script src="script.js"></script>
+
+  </body>
 </html>
