--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Imágenes UAS</title>
-    <script src="script.js" defer></script>
-  </head>
-  <body>
-    <h1>Galería de imágenes</h1>
-    <div id="gallery"></div>
-    <div id="imagenes"></div>
-    <script src="script.js"></script>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Imágenes UAS en la Nube</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f8f9fa;
+      padding: 2rem;
+    }
+    h1 {
+      color: #004080;
+    }
+    img {
+      margin: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.3);
+    }
+  </style>
+</head>
+<body>
+  <h1>Imágenes de la UAS almacenadas en la Nube</h1>
+  <div id="imagenes"></div>
 
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
